cybnity-platform/charts/ui-apis-gateway/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-cybnity
  namespace: default
spec:
  gatewayClassName: traefik-cybnity

  # Only Routes from the same namespace are allowed.
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same

    #- name: https
    #  protocol: HTTPS
    #  port: 443
    #  tls:
    #    mode: Terminate
    #    certificateRefs:
    #      - name: secret-tls
    #        namespace: default

    #  allowedRoutes:
    #    namespaces:
    #      from: Same

    - name: tcp
      protocol: TCP
      port: 3000
      allowedRoutes:
        namespaces:
          from: Same

    - name: tls
      protocol: TLS
      port: 3443
      tls:
        mode: Terminate
        certificateRefs:
          - name: secret-tls
            namespace: default

      allowedRoutes:
        namespaces:
          from: Same
